# repolyze

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  PRIVACY-POLICY.md  README.md  dist-workspace.toml  justfile  mascot.md  squirrel.toml
.github/workflows/: ci.yml  release.yml
crates/repolyze-cli/: Cargo.toml
crates/repolyze-cli/src/: args.rs  main.rs  run.rs
crates/repolyze-cli/tests/: analyze_cli.rs  cli_help.rs  compare_cli.rs
crates/repolyze-cli/wix/: main.wxs
crates/repolyze-core/: Cargo.toml
crates/repolyze-core/src/: aggregate.rs  analytics.rs  chart_util.rs  date_util.rs  error.rs  input.rs  lib.rs  model.rs  service.rs  settings.rs
crates/repolyze-git/: Cargo.toml
crates/repolyze-git/src/: activity.rs  backend.rs  branches.rs  contributions.rs  lib.rs  parse.rs  repository.rs
crates/repolyze-git/tests/: git_fixture.rs
crates/repolyze-git/tests/support/: mod.rs
crates/repolyze-github/: Cargo.toml
crates/repolyze-github/src/: activity.rs  api_types.rs  client.rs  contributors.rs  lib.rs  size.rs
crates/repolyze-metrics/: Cargo.toml
crates/repolyze-metrics/src/: count.rs  lib.rs  walk.rs
crates/repolyze-report/: Cargo.toml
crates/repolyze-report/src/: json.rs  lib.rs  markdown.rs  table.rs
crates/repolyze-store/: Cargo.toml
crates/repolyze-store/src/: error.rs  lib.rs  migrations.rs  models.rs  path.rs  sqlite.rs
crates/repolyze-store/tests/: cache_roundtrip.rs  database_metadata.rs  migrations.rs  path_bootstrap.rs  raw_git_facts.rs  rf8_rf9_queries.rs  scan_runs.rs  snapshot_aggregates.rs
crates/repolyze-tui/: Cargo.toml
crates/repolyze-tui/src/: app.rs  event.rs  lib.rs  ui.rs
docs/: CNAME  analysis_rules.md  development.md  homebrew.md  index.html  llms.txt  release.md  robots.txt  sitemap.xml  style.css
docs/plans/: 2026-03-14-repolyze-design.md  2026-03-14-repolyze-implementation-plan.md  RF-8-9.md  database.md
packaging/homebrew/: repolyze.rb
scripts/: release.py
tests/fixtures/repos/basic-tree/: README.md
xtask/src/: main.rs
