[workspace]
members = ["crates/repolyze-cli", "crates/repolyze-core", "crates/repolyze-git", "crates/repolyze-tui", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/maximgorbatyuk/repolyze"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
