[workspace]
members = ["crates/repolyze-cli", "crates/repolyze-core", "crates/repolyze-git", "crates/repolyze-metrics", "crates/repolyze-report", "crates/repolyze-store", "crates/repolyze-tui", "xtask"]
default-members = ["crates/repolyze-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/maximgorbatyuk/repolyze"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
