[package]
name = "repolyze"
description = "Repository analytics for local Git repositories"
homepage = "https://repolyze.app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "repolyze"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
repolyze-core = { path = "../repolyze-core" }
repolyze-git = { path = "../repolyze-git" }
repolyze-metrics = { path = "../repolyze-metrics" }
repolyze-report = { path = "../repolyze-report" }
repolyze-store = { path = "../repolyze-store" }
repolyze-tui = { path = "../repolyze-tui" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
