[package]
name = "repolyze"
description = "Repository analytics for local Git repositories"
homepage = "https://repolyze.app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.wix]
upgrade-guid = "35351E51-FD82-43AE-9C8D-FA3FF847C424"
path-guid = "C541DB8B-A6B3-4EB9-98CE-474FE6C36C53"
license = false
eula = false

[[bin]]
name = "repolyze"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
repolyze-core = { path = "../repolyze-core" }
repolyze-git = { path = "../repolyze-git" }
repolyze-metrics = { path = "../repolyze-metrics" }
repolyze-report = { path = "../repolyze-report" }
repolyze-store = { path = "../repolyze-store" }
repolyze-tui = { path = "../repolyze-tui" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
