[package]
name = "repolyze-github"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
repolyze-core = { path = "../repolyze-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
