[package]
name = "repolyze-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
home = "0.5"
repolyze-core = { path = "../repolyze-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
