[package]
name = "repolyze-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm = "0.28"
ratatui = "0.29"
repolyze-core = { path = "../repolyze-core" }
repolyze-git = { path = "../repolyze-git" }
repolyze-metrics = { path = "../repolyze-metrics" }
repolyze-report = { path = "../repolyze-report" }
repolyze-store = { path = "../repolyze-store" }

[dev-dependencies]
tempfile = "3"
